# welkin

./: .gitignore  Cargo.toml  bug_repros.w
.github/workflows/: build.yml
.welkin/: main.w
.welkin/Bool/: Bool.w  false.w  other.w  true.w
.welkin/core/: core.w
.welkin/core/Bool/: and.w  double_negation.w  equal.w  if.w  not.w  or.w
.welkin/core/Bound/: Bound.w  from_size.w  induct.w  size.w  succ.w  zero.w
.welkin/core/BoxPoly/: BoxPoly.w
.welkin/core/Char/: Char.w  from_size.w
.welkin/core/Commutative/: Commutative.w
.welkin/core/Delay/: Delay.w  bind.w  monad.w  never.w  pure.w
.welkin/core/Equal/: Equal.w  chain.w  flip.w  left.w  map.w  rewrite.w  right.w
.welkin/core/Functor/: Functor.w
.welkin/core/HVector/: HVector.w
.welkin/core/IO/: IO.w  bind.w  bind_base.w  bind_cont.w  pure.w
.welkin/core/Idempotent/: Idempotent.w
.welkin/core/Identity/: Identity.w
.welkin/core/LeftIdentity/: LeftIdentity.w
.welkin/core/List/: List.w  head.w
.welkin/core/Maybe/: Maybe.w  functor.w  map.w
.welkin/core/Monad/: Monad.w
.welkin/core/Monoid/: Monoid.w  identity.w  semigroup.w
.welkin/core/Nat/: Nat.w  add.w  equals.w  from_size.w  is_zero.w  mul.w  one.w  pow.w  pred.w  two.w
.welkin/core/Not/: Not.w
.welkin/core/Pair/: Pair.w  left.w
.welkin/core/Recursion/Fix/: Fix.w
.welkin/core/Recursion/Mu/: Mu.w
.welkin/core/Recursion/Nat/: Nat.w
.welkin/core/RightIdentity/: RightIdentity.w
.welkin/core/Semigroup/: Semigroup.w  concat.w  magma.w
.welkin/core/Sigma/: Sigma.w
.welkin/core/Size/: add.w  add_zero_l_elim.w  add_zero_r_elim.w  bounded_fold.w  extract_pred.w  fold.w  fold_zero_elim.w  induct.w  induct_indexed.w  one.w  pred.w  pred_succ_elim.w  recurse.w  recurse_indexed.w  slow_sub.w  succ.w  thirty_two.w  two.w  zero.w
.welkin/core/Size/add/: monoid.w  semigroup.w
.welkin/core/Sized/: Sized.w
.welkin/core/State/: State.w  bind.w  monad.w  pure.w
.welkin/core/Stream/: Stream.w  head.w  map.w  open.w  tail.w  take.w
.welkin/core/String/: concat.w  concat_sized.w
.welkin/core/Thunk/: Thunk.w
.welkin/core/Vector/: Vector.w  concat.w  concat_base.w  concat_cont.w  fold.w  fold_cont.w  functor.w  head.w  map.w  map_base.w  map_cont.w  tail.w  unfold.w
.welkin/core/Void/: Void.w
.welkin/core/Whelk/: Whelk.w
.welkin/core/Word/: Word.w  from_size.w  inc_cont.w  increment.w  ones.w  zeros.w
.welkin/core/algebra/Associative/: Associative.w
.welkin/core/algebra/Commutative/: Commutative.w
.welkin/core/algebra/LeftIdentity/: LeftIdentity.w
.welkin/core/y/: y.w
.welkin/whelk/: whelk.w
.welkin/whelk/Ast/: Ast.w
.welkin/whelk/Whelk/: Whelk.w
.welkin/whelk/WhelkIO/: WhelkIO.w  bind.w  call.w  end.w  pure.w
.welkin/whelk/WhelkRequest/: WhelkRequest.w
.welkin/whelk/WhelkResponse/: WhelkResponse.w
binding/: Cargo.toml
binding/lib/: Cargo.toml
binding/lib/src/: lib.rs
binding/macros/: Cargo.toml
binding/macros/src/: lib.rs
binding/macros/src/adt/: analogous.rs  derive.rs  from_analogue.rs  mod.rs  to_analogue.rs
binding/macros/src/adt/from_welkin/: error.rs  mod.rs
binding/macros/src/adt/to_welkin/: error.rs  mod.rs
binding/macros/src/bind/: mod.rs
binding/src/: lib.rs
binding/test/: Cargo.toml
binding/test/src/: main.rs
parser/: Cargo.toml
parser/src/: lib.rs
parser/src/term/: application.rs  duplicate.rs  lambda.rs  mod.rs
parser/src/term/block/: literal.rs  match_arms.rs  mod.rs
parser/src/util/: bump.rs  mod.rs
src/: compile.rs  definitions.rs  hash.rs  lib.rs  main.rs
src/compiler/: mod.rs  term.rs
src/compiler/item/: data.rs  mod.rs
src/compiler/term/: match_arms.rs  mod.rs
src/parser/: mod.rs  util.rs
src/parser/term/: application.rs  block.rs  duplicate.rs  lambda.rs  mod.rs
src/parser/util/: bump.rs  mod.rs
whelk/: .gitignore  Cargo.toml  index.html  index.js  package.json  webpack.config.js  worker.js
whelk/.cargo/: config.toml
whelk/src/: lib.old.rs  lib.rs  worker.rs
whelk/src/bindings/: mod.rs
whelk/src/bindings/conversions/: ast.rs  bool.rs  char.rs  mod.rs  size.rs  string.rs  vector.rs  word.rs
whelk/src/bindings/io/: iter.rs  mod.rs
whelk/src/edit/: apply_mutations.rs  mod.rs  render_to.rs  scratchpad.rs
whelk/src/edit/dynamic/: def.rs  mod.rs
whelk/src/edit/dynamic/abst/: mod.rs
whelk/src/edit/dynamic/abst/controls/: adt.rs  invoke.rs  mod.rs  quote.rs  variable.rs
whelk/src/edit/dynamic/abst/controls/literal/: codegen.rs  mod.rs  size.rs  string.rs
whelk/src/edit/dynamic/abst/implementation/: mod.rs
whelk/src/edit/dynamic/abst/implementation/fields/: mod.rs  static.rs  string.rs  term.rs
whelk/src/edit/dynamic/abst/implementation/fields/container/: mod.rs  v_stack.rs  wrapper.rs
whelk/src/edit/ui_section/: add_ui.rs  error.rs  mod.rs  mutations.rs  variance.rs
whelk/src/edit/zipper/: dynamic.rs  mod.rs
whelk/src/edit/zipper/analysis/: annotate.rs  check.rs  equivalent.rs  infer.rs  is_complete.rs  mod.rs  normalize.rs  shift.rs  stratified.rs  substitute.rs
whelk/src/edit/zipper/analysis/cursor/: infer.rs
whelk/src/evaluator/: inet.rs  mod.rs  substitution.rs  worker.rs
whelk/src/interface/: any.rs  bool.rs  box_poly.rs  char.rs  io.rs  mod.rs  size.rs  sized.rs  string.rs  unit.rs  vector.rs  whelk.rs  word.rs
whelk/src/interface/whelk/: mod.rs  request.rs  whelk.rs
whelk/zipper/: Cargo.toml
whelk/zipper/src/: lib.rs
(+35 files in other folders)
