[package]
name = "parser"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[dependencies]
bumpalo = { version = "3.6.1", features = ["boxed", "collections"] }
combine = "4.5.2"
ring = "0.16.20"
serde = { version = "1.0.125", features = ["derive"] }
welkin-core = { git = "https://github.com/noocene/welkin-core", branch = "main" }
