[package]
name = "whelk"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
console_error_panic_hook = "0.1.6"
derivative = "2.2.0"
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.24"
web-sys = { version = "0.3.51", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "KeyboardEvent",
    "HtmlInputElement"
  ] }
welkin = { path = "../" }
welkin-core = { git = "https://github.com/noocene/welkin-core", branch = "main" }
