[package]
name = "whelk"
version = "0.1.0"
authors = ["Izzy Swart <zenerboson@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.44"
async-recursion = "0.3.2"
bincode = "1.3.3"
console_error_panic_hook = "0.1.6"
derivative = "2.2.0"
futures = "0.3.15"
serde = { version = "1.0.126", features = ["derive"] }
thiserror = "1.0.26"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.24"
web-sys = { version = "0.3.51", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "KeyboardEvent",
    "HtmlInputElement",
    "DomTokenList",
    "Text",
    "Selection",
    "Range",
    "NodeList",
    "ClipboardEvent",
    "DataTransfer",
    "Navigator",
    "Clipboard",
    "FocusEvent",
    "Event",
    "UiEvent",
    "EventTarget",
    "Storage",
    "Worker",
    "Performance",
    "DedicatedWorkerGlobalScope"
  ] }
welkin-core = { git = "https://github.com/noocene/welkin-core", branch = "main" }
welkin = { path = "../" }
welkin-binding = { path = "../binding" }
base91 = "0.1.0"
mincodec = { git = "https://github.com/noocene/mincodec" }
core-futures-io = { git = "https://github.com/noocene/core-futures-io", features = ["futures"] }
downcast-rs = "1.2.0"
uuid = { version = "0.8.2", features = ["v4", "serde", "wasm-bindgen"] }
js-sys = "0.3.55"
bumpalo = "3.8.0"
typetag = "0.1.7"
