[package]
name = "zipper"
version = "0.1.0"
edition = "2018"

[dependencies]
base91 = "0.1.0"
mincodec = { path = "../../../../vessels/mincodec" }
welkin-core = { git = "https://github.com/noocene/welkin-core", branch = "main" }
core-futures-io = { git = "https://github.com/noocene/core-futures-io", features = ["futures"] }
